# solid

./: .gitignore  Cargo.toml  log.txt  readme.md  solid.bat  solid.sh
core/: checksum  mods.toml
core/data/: character.toml  class.toml  classes.toml  dungeon.toml  effects.toml  game.toml  home.toml  items.toml  load_game.toml  locations.toml  magic.toml  missions.toml  mobs.toml  new_game.toml  option.toml  races.toml
docs/: structure.md  texture_map.md
mods/: readme.md
src/: integrity.rs  main.rs
src/core/: functions.rs  mod.rs  toml_loader.rs
src/core/data/: character.rs  dungeon.rs  item.rs  location.rs  mob.rs  mod.rs  race.rs
src/egui/: input.rs  mod.rs  painter.rs
src/game/: configuration.rs  mod.rs
src/game/scene/: entity.rs  location.rs  mod.rs
src/game_reader/: configuration.rs  event.rs  functions.rs  game_entity.rs  location.rs  mod.rs  scene.rs  toml_loader.rs
src/game_reader/data/: class.rs  effect.rs  location.rs  mission.rs  mob.rs  mod.rs  race.rs
src/game_reader/scene/: effect.rs  entity.rs  location.rs  mod.rs
src/menu/: mod.rs
src/ui/: component.rs  mod.rs
src/window/: game.rs
