[package]
name = "solid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui_extras = {version="0.21.0", features=["image"]}
ggez = "0.9.0-rc0"
image = {version="0.24.5", features=["png"]}
serde = "1.0.156"
toml = "0.7.3"
