[package]
name = "solid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.dev]
lto = true
opt-level = 3
strip = true

[dependencies]
egui = "0.21.0"
egui_extras = {version="0.21.0", features=["image"]}
ggez = "0.9.0-rc0"
ggegui = {git="https://github.com/Qinbeans/ggegui.git", branch="master"}
image = { version = "0.24.5", features = ["png"] }
serde = "1.0.156"
toml = "0.7.3"
sha2 = "0.10.6"
rand = "0.8.5"
serde_json = "1.0.96"
serde_with = "2.3.2"
png = "0.17.8"
